checking image files if case sensitive

--- a/sample_website.html
+++ b/sample_website.html
@@ -13,7 +13,7 @@
 
         /* Style for the header */
         header {
-            background-image: url('header_background.jpg');
+            background-image: url('header_background.JPG');
             background-size: cover;
             background-position: center;
             height: 300px;
@@ -107,15 +107,15 @@
         <h2>我们的服务</h2>
         <div class="gallery">
             <div>
-                <img src="hotel.jpg" alt="酒店">
+                <img src="hotel.JPG" alt="酒店">
                 <p>酒店</p>
             </div>
             <div>
-                <img src="food.jpg" alt="餐饮">
+                <img src="food.JPG" alt="餐饮">
                 <p>美食</p>
             </div>
             <div>
-                <img src="transportation.jpg" alt="交通">
+                <img src="transportation.JPG" alt="交通">
                 <p>交通</p>
             </div>
         </div>
