--- a/sample_website_html.html
+++ b/sample_website_html.html
@@ -43,6 +43,13 @@
             background-color: #555;
             border-radius: 5px;
         }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
