--- a/sample_website_css.html
+++ b/sample_website_css.html
@@ -23,9 +23,9 @@
     </nav>
 
     <!-- Body Content -->
-    <div>
+    <div class="content">
         <h2>我们的服务</h2>
-        <div>
+        <div class="gallery">
             <div>
                 <img src="hotel.JPG" alt="酒店">
                 <p>酒店</p>
