--- a/article.html
+++ b/article.html
@@ -68,7 +68,7 @@
 
             <p>工作和学习都不行？没关系，先知为我们安排了家庭和爱情 ，谈谈情说说爱，孝父母享天伦。 如果摊上爱别离怨憎会，没关系，先知为我们安排了哲学、宗教和信仰。 每个都是个坑，我们只管往里跳，里面是不是无底洞，我们出得出不来，就看自己的修行和造化了。 既然都是坑，能不能不跳？ 看官们要知道我们来到这个世界岂是我们自己选的？不都是莫名被推下来的？还是那句“擦干泪，不要问，为什么？”</p>
 
-            <p>以前总想求全，以为学得越多越好，越深越好，岂不知越多越无知，越深越难拔。我们就从小小的、慢慢得、用心地做，用心观察、用心聆听、用心感受，知足和知不足间小心地切换。啰哩啰嗦，说了这么多，暂且打住，欲知后事如何，且听下回分解。</p>
+            <p>以前总想求全，以为学得越多越好，越深越好，岂不知越多越无知，越深越难拔。我们就从小小的、慢慢得、用心地做，用心观察、用心聆听、用心感受，知足和知不足间小心地切换。"请不要问，请不要问，倘使有梦，尽管去寻。"</p>
         </article>
     </div>
     <footer>
