modified index page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <p></p>
         </div>     
         <div class="article-preview">
-            <h2><a href="article2.html">与自己和解</a></h2>
+            <h2><a href="article2.html">如何与自己和解?</a></h2>
             <p>2024年12月24日</p>
             <p></p>
         </div>  
