modified background img url for travel articles

--- a/travel/hengshan.html
+++ b/travel/hengshan.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background: url('header_background.JPG') no-repeat center/cover;
+            background: url('https://xuxinzhiyuan.github.io/header_background.JPG') no-repeat center/cover;
             text-align: center;
             padding: 50px 20px;
             color: #fff;
