modified punctions in songshan

--- a/travel/songshan.html
+++ b/travel/songshan.html
@@ -65,13 +65,13 @@
     </header>
     <div class="container">
         <article>
-            <p>上次爬完恒山只过了两周, 我便再次启动了一山一景一段行, 这次是中岳嵩山和少林寺. 嵩山位于河南省登封市, 从北京过去在郑州中转会很方便. 同样是在周末, 喜欢乘坐晚间的卧铺然后第二天清早到达, 同样是当日往返.</p>
+            <p>上次爬完恒山只过了两周, 我便再次启动了一山一景一段行, 这次是中岳嵩山和少林寺。 嵩山位于河南省登封市, 从北京过去在郑州中转会很方便。 同样是在周末, 喜欢乘坐晚间的卧铺然后第二天清早到达, 同样是当日往返。</p>
 
-            <p>大巴中巴反正去往嵩山的车很多, 有的人会在中途嵩山书院下车, 我想先去少林寺, 所以应该是在终点下的车. 少林寺很有名, 所以人也很多, 其实也没什么好看的, 倒是在大门口自拍了很多张. 《少林寺》的电影实在是太有名了, 当时还没有流行自拍杆, 能拍照的智能手机也不多. 我扛了单反和三脚架, 自拍也不用求人, 摆出黄飞鸿的造型, 直到自己满意为止. 去塔林转了转, 那边人相对少些, 又是一通自拍. 印象最深的反倒是溜达到一个寂静无人的山坡, 看见一个小和尚躺在大石头上看手机, 让我现在想起也不禁会心一笑. 谁说出家人四大皆空, 也是没事经常刷手机啊. 只不过当时还只是微博, 微信都还没开始流行起来.</p>
+            <p>大巴中巴反正去往嵩山的车很多, 有的人会在中途嵩山书院下车, 我想先去少林寺, 所以应该是在终点下的车。少林寺很有名, 所以人也很多, 其实也没什么好看的, 倒是在大门口自拍了很多张。《少林寺》的电影让我对寺门记忆深刻, 当时还没有流行自拍杆, 能拍照的智能手机也不多。我扛了单反和三脚架, 自拍也不用求人, 在寺门前摆出黄飞鸿的造型, 直到自己满意为止。 我接着去塔林转了转, 那边人相对少些, 又是一通自拍。印象最深的反倒是溜达到一个寂静无人的山坡, 看见一个小和尚躺在大石头上看手机, 让我现在想起也不禁会心一笑。谁说出家人四大皆空, 也是没事经常刷手机啊。只不过当时还只是微博, 微信都还没开始流行起来。</p>
 
-        <p>从少林寺出来我选择先去达摩洞, 这段山路的台阶非常陡, 可把我累坏了, 沿途也没什么风景, 只有这么一尊达摩的造像, 又是一次纯粹享受登山的乐趣. 上了五乳峰后, 遇上一群驴友, 好像来自一个叫什么城市达人的组织, 男男女女三四十号人. 我跟着他们在嵩山野爬, 踩在厚厚的落叶上, 在狭窄的山路上有时还要手脚并用. 他们带了功放机, 倒是动感音乐一路相伴, 算是计划外的一次惊喜吧.不过这次野爬占用了很多的时间, 等到真正进入嵩山官方路线, 已经是下午了, 为了能够赶到最后的缆车下山, 我不得不放弃登顶峻极峰的计划. 虽然这次没能尽兴领略嵩山的雄伟, 也不失为一次有趣的旅行.</p>
+        <p>从少林寺出来我选择先去达摩洞, 这段山路的台阶非常陡, 可把我累坏了, 沿途也没什么风景, 只有这么一尊达摩的造像, 又是一次纯粹享受登山的乐趣。上了五乳峰后, 遇上一群驴友, 好像来自一个叫什么城市达人的组织, 男男女女三四十号人。我跟着他们在嵩山野爬, 踩在厚厚的落叶上, 在狭窄的山路上有时还要手脚并用。现在知道五乳峰是一个赏红叶的胜地, 不过当时应该是过了红叶的季节。​他们带了功放机, 倒是动感音乐一路相伴, 算是计划外的一次惊喜吧。不过这次野爬占用了很多的时间, 等到真正进入嵩山官方路线, 已经是下午了, 为了能够赶到最后的缆车下山, 我不得不放弃登顶峻极峰的计划。虽然这次没能尽兴领略嵩山的雄伟, 也不失为一次有趣的登山体验。</p>
         <div><img src="https://xuxinzhiyuan.github.io/travel/songshan_damo.JPG"></div>
-        <p>在下山缆车上, 听着《牧羊曲》优美的旋律, 看着落日西沉, 顿时感觉非常的放松. 也许是因为大山的雄伟, 让人感觉渺小, 所以不自觉就放松了.</p>
+        <p>在下山缆车上, 听着《牧羊曲》优美的旋律, 看着落日西沉, 顿时感觉非常的放松。也许是因为大山的雄伟, 让人感觉渺小, 所以不自觉就放松了。</p>
 
         </article>
     </div>
