--- a/travel/taishan.html
+++ b/travel/taishan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>五岳之中岳嵩山</title>
+    <title>五岳之东岳泰山</title>
     <style>
         body {
             font-family: 'Georgia', serif;
@@ -61,7 +61,7 @@
 </head>
 <body>
     <header>
-        <h1>五岳行(2)——中岳嵩山和少林寺</h1>
+        <h1>五岳行(3)——雨中登泰山</h1>
     </header>
     <div class="container">
         <article>
